<resources>
    <string name="app_name">UberCloneRider</string>
    <string name="log_in_with_phone_number">Log in with phone number</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="continue_text">Continue</string>
    <string name="register_text">Let\'s start with creating your account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">+1 650–555-1234</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="gps">Gps</string>
    <string name="rating">0.0</string>

    <string name="title_camera">Camera</string>
    <string name="title_gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="choose_photo">Choose a photo</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_location_required">Permission location required</string>
    <string name="camera_permission">Access camera granted</string>
    <string name="camera_denied">Access camera denied</string>
    <string name="camera_permission_message">We need your permission to access the camera</string>
    <string name="gallery_permission">Access gallery granted</string>
    <string name="gallery_denied">Access gallery denied</string>
    <string name="gallery_permission_message">We need your permission to access the camera</string>
    <string name="information_update_success">Information updated successfully</string>
    <string name="uploading">Uploading:</string>
    <string name="first_name_error">Please enter a first name</string>
    <string name="last_name_error">Please enter a last name</string>
    <string name="phone_number_error">Please enter a phone number</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="user_position_message">You are here!</string>
    <string name="user_online_message">You\'re online!</string>

    <string name="log_out_title">Log out</string>
    <string name="log_out_message">Do you really want to log out?</string>
    <string name="log_out_negative_button">Cancel</string>
    <string name="log_out_positive_button">Log out</string>
    <string name="log_out_k_toasty">Log out successfully</string>

    <string name="welcome">Welcome</string>
    <string name="permission_denied_part_1">Permission</string>
    <string name="permission_denied_part_2">was denied</string>

    <string name="drivers_not_found">Drivers not found</string>
    <string name="key_not_found">Key driver not found</string>
    <string name="welcome_text">Good afternoon</string>
    <string name="choose_a_saved_place">Choose a saved place</string>
    <string name="city_name_not_found">City name not found</string>
    <string name="good_morning">Good morning</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_evening">Good evening</string>
    <string name="title_activity_request_driver">Map</string>
    <string name="impossible_to_estimate_routes">Impossible to estimate route</string>
    <string name="load_map_style_failed">Load map style failed</string>
    <string name="_5_min">5 min</string>
    <string name="very_very_very_long_text">Very very very long text</string>
    <string name="navigation_next">Navigation next</string>
    <string name="map_tie">Vador Tie fighter</string>
    <string name="flamengo">Flamengo</string>
    <string name="pay_by_cash">Pay by cash</string>
    <string name="confirm_uber">Confirm Uber</string>
    <string name="confirm_pickup_spot">Confirm pickup spot</string>
    <string name="pickup_address">Av. das Nações Unidas - Botafogo, Rio de Janeiro - RJ, 20021-140</string>
    <string name="confirm_pickup">Confirm pickup</string>
    <string name="none">None</string>
    <string name="meet_driver_here">Meet driver here</string>
    <string name="finding_your_ride">Finding your ride</string>
    <string name="token_not_found">Token not found</string>
    <string name="send_request_driver_failed">Request driver failed</string>
    <string name="permission_required">Permission required</string>
    <string name="no_driver_accept">There are no driver accept your request</string>
    <string name="trip_not_found">Cannot found trip with key</string>
    <string name="uber_x">Vehicle type</string>
    <string name="car_number">AB 123 CD</string>
    <string name="driver_name">Driver name</string>
    <string name="ascii_dot">■</string>
    <string name="_4_75">4.75</string>
    <string name="language">English</string>
    <string name="any_pickup_note">Any pickup note?</string>
    <string name="_3">3</string>
    <string name="min_naway">Min\nAway</string>
</resources>