<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:id="@+id/driver_information_cv">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/tie_driver"
                    android:layout_marginStart="50dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/driver_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_baseline_account_circle_24"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentEnd="true">

                <TextView
                    android:id="@+id/vehicle_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/uber_x"
                    android:textSize="16sp"
                    android:textColor="@color/money_color"/>

                <TextView
                    android:id="@+id/vehicle_number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/car_number"
                    android:textSize="20sp"
                    android:textColor="@color/money_color"/>
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/driver_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/driver_name"
                    android:textSize="14sp"
                    android:textColor="@color/money_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/ascii_dot"
                    android:textSize="14sp"
                    android:textColor="@color/money_color"/>

                <TextView
                    android:id="@+id/driver_rating_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableEnd="@drawable/ic_baseline_star_gold_24"
                    android:gravity="fill_horizontal|fill|left"
                    android:text="@string/_4_75"
                    android:textSize="14sp"
                    android:textColor="@color/money_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/ascii_dot"
                    android:textSize="14sp"
                    android:textColor="@color/money_color"/>

                <TextView
                    android:id="@+id/foreign_language_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/language"
                    android:textSize="14sp"
                    android:textColor="@color/money_color"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:weightSum="12">

            <ImageView
                android:id="@+id/call_driver_iv"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_phone__black_24"
                android:tint="@color/black"/>

            <EditText
                android:id="@+id/note_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginStart="8dp"
                android:hint="@string/any_pickup_note"
                android:inputType="textMultiLine" />
            <!--<com.google.android.material.textfield.TextInputLayout
                android:id="@+id/note_til"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="10"
                android:layout_marginStart="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/note_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/any_pickup_note"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>-->

            <ImageView
                android:id="@+id/send_note_iv"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_wb_sunny_24"
                android:tint="@color/black"/>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>