<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="80dp"
            app:borderWidth="0dp"
            android:src="@drawable/ic_baseline_my_location_24"
            android:contentDescription="@string/gps" />
    </fragment>

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:context=".ui.home.HomeFragment"
        android:gravity="bottom"
        android:id="@+id/activity_main">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:id="@+id/welcome_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/welcome_text"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@color/google_text_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <fragment
                    android:id="@+id/autocomplete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_add_24" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/choose_saved_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_baseline_star_gold_24"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/choose_a_saved_place"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>


    </com.sothree.slidinguppanel.SlidingUpPanelLayout>

</androidx.constraintlayout.widget.ConstraintLayout>